# aether-fhirpath

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  VERSIONING.md  clippy.toml  package.json  pnpm-lock.yaml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: auto-tag.yml  ci.yml  deploy-docs.yml  release.yml
.junie/: guidelines.md
benches/: fhirpath_benchmarks.rs
docs/: optimization-performance.md  usage-examples.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: csharp_benchmark_results.json  java_benchmark_results.json  javascript_benchmark_results.json  javascript_test_results.json  python_benchmark_results.json  python_test_results.json
docs-site/public/pkg/: fhirpath_wasm.d.ts  fhirpath_wasm.js  fhirpath_wasm_bg.wasm  fhirpath_wasm_bg.wasm.d.ts  package.json
docs-site/scripts/: copy-comparison-data.js
docs-site/src/components/: BenchmarkChart.svelte  BenchmarkDetailsApp.svelte  ComparisonApp.svelte  SiteTitle.astro  TestResultsChart.svelte  resultLoader.js
examples/: nodejs-integration.js
fhirpath-cli/: Cargo.toml  patient.json
fhirpath-cli/src/: main.rs
fhirpath-comparison/: README.md  SETUP.md
fhirpath-comparison/implementations/rust/: Cargo.toml  README.md
fhirpath-comparison/implementations/rust/src/: main.rs  test_runner.rs
fhirpath-comparison/results/: comparison_report.json  csharp_test_results.json  go_benchmark_results.json  go_test_results.json  java_test_results.json  rust_benchmark_results.json  rust_test_results.json
fhirpath-comparison/scripts/: run-comparison.py
fhirpath-comparison/test-cases/: test-config.json
fhirpath-core/: Cargo.toml  debug_converts_to_integer.rs  debug_datetime.rs  debug_tokenization.rs  test_tokenization.rs
fhirpath-core/benches/: fhirpath_benchmarks.rs
fhirpath-core/examples/: debug_integration.rs  debug_path.rs  debug_xor.rs  debug_xor_issue.rs
fhirpath-core/fhirpath-core/: debug_datetime.rs  test_datetime_fix.rs
fhirpath-core/fhirpath-core/fhirpath-core/tests/official-tests/r4/input/: patient-example.xml
fhirpath-core/fhirpath-core/tests/: debug_datetime_test.rs
fhirpath-core/src/: debug_tokens.rs  errors.rs  evaluator.rs  lexer.rs  lib.rs  model.rs  parser.rs
fhirpath-core/tests/: conformance_test.rs  debug_benchmark_test.rs  debug_conversion_functions.rs  debug_date_conversion.rs  debug_parser_issue.rs  debug_quantity_issue.rs  debug_test.rs  evaluator_test.rs  integration_test.rs  lexer_test.rs  official_fhirpath_tests.rs  parser_test.rs  test_quantity_properties.rs  visitor_test.rs
fhirpath-core/tests/fixtures/: patient-example.json
fhirpath-node/: Cargo.toml  build.rs  index.d.ts  index.js  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
fhirpath-node/src/: lib.rs
fhirpath-node/test/: index.test.ts
fhirpath-wasm/: Cargo.toml  DEMO_SOLUTION.md  package-lock.json  package.json  test_demo_simple.html
fhirpath-wasm/demo/: app.js  index.html
fhirpath-wasm/src/: lib.rs
phases/: implementation-status.md  phase1-project-setup.md  phase2-core-fhirpath-engine-implementation.md  phase3-advanced-features.md  phase4-nodejs-integration.md  phase5-testing-and-documentation.md  phase6-packaging-and-distribution.md
playground/: README.md  app.js  index.html  styles.css
scripts/: update-test-compliance.sh
vscode-fhirpath-extension/: .vscodeignore  DEBUG_GUIDE.md  LICENSE  README.md  fhirpath-extension-0.1.0.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-fhirpath-extension/media/: playground.css  playground.js  reset.css  vscode.css
vscode-fhirpath-extension/src/: extension.ts
vscode-fhirpath-extension/syntaxes/: fhirpath-fsh-injection.json  fhirpath-injection.json  fhirpath-json-injection.json  fhirpath-xml-injection.json  fhirpath-yaml-injection.json  fhirpath.tmLanguage.json  fsh.tmLanguage.json
(+40 files in other folders)
