[workspace]
resolver = "3"
members = [
    "fhirpath-core",
    "fhirpath-cli",
    "fhirpath-node",
    "fhirpath-wasm",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Aether FHIRPath Team <funyloony@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/octoshikari/aether-fhirpath"
description = "A FHIRPath implementation in Rust"

[workspace.dependencies]
# Common dependencies for all crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
