[package]
name = "fhirpath-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for FHIRPath evaluation"

[dependencies]
fhirpath-core = { path = "../fhirpath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
human-panic = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"


[[bin]]
name = "aether-fhirpath"
path = "src/main.rs"
