[package]
name = "fhirpath-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core FHIRPath engine implementation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log = "0.4.20"

# Parser dependencies
nom = "7.1.3"

[features]
default = []
trace = []

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
criterion = { version = "0.5", features = ["html_reports"] }
quick-xml = "0.31"
serde-xml-rs = "0.6"

[[bench]]
name = "fhirpath_benchmarks"
harness = false
