[package]
name = "fhirpath-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for FHIRPath engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
fhirpath-core = { path = "../fhirpath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

# Node.js binding dependencies
napi = { version = "2.14", features = ["serde-json", "tokio_rt"] }
napi-derive = "2.14"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
napi = { version = "2.14", features = ["tokio_rt"] }
