[package]
name = "fhirpath-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for FHIRPath engine"

[features]
we_alloc = []

[lib]
crate-type = ["cdylib"]

[dependencies]
fhirpath-core = { path = "../fhirpath-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
