[package]
name = "fhirpath-comparison-rust"
version = "1.0.0"
edition = "2021"
description = "Rust FHIRPath implementation for comparison testing"
authors = ["FHIRPath Comparison Project"]
license = "MIT"

[dependencies]
# Use the local aether-fhirpath implementation
fhirpath-core = { path = "../../../fhirpath-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "test_runner"
path = "src/main.rs"
